# nexisos-bootstrap

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  diagram1.puml
nexis_common/: Cargo.toml
nexis_guard/: Cargo.toml
nexis_guard/src/: alerts.rs  cli.rs  config.rs  lib.rs  main.rs  scan.rs  services.rs
nexis_guard/src/translate/: clamav.rs  mod.rs  suricata.rs  tetragon.rs
nexis_init/: Cargo.toml
nexis_init/src/: cgroup.rs  config.rs  epoll.rs  init.rs  lib.rs  manager.rs  notify.rs  pidfd.rs  service.rs  signal.rs
nexis_pm/: Cargo.toml  layout.md
nexis_pm/src/: constants.rs  lib.rs  main.rs
nexis_pm/src/config/: composer.rs  types.rs
nexis_pm/src/files/: content_address.rs
nexis_pm/src/fleet/: composer.rs
nexis_pm/src/generations/: manager.rs
nexis_pm/src/security/: selinux.rs
nexis_pm/src/store/: database.rs  layout.rs  reflink.rs
nexis_pm/src/utils/: mod.rs
nexis_scan/: Cargo.toml
