[workspace]
members = [
    "nexis_common",
    "nexis_init",
    "nexis_guard",
    "nexis_pm",
]

[workspace.dependencies]
serde = "1.0"
tokio = "1"

# =========================
# Profiles
# =========================
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
debug = 2
