[package]
name = "nexis_init"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Gortych <kyle.gortych.dev@gmail.com>"]
description = "Lightweight init system for NexisOS with pidfd + mio service supervision"
license = "GPL-3.0-or-later"
repository = "https://github.com/NexisOS/NexisOS"
homepage = "https://github.com/NexisOS/NexisOS"
keywords = ["init", "system", "service-manager", "mio", "pidfd"]
categories = ["command-line-utilities", "os"]

[lib]
name = "nexis_init"
path = "src/lib.rs"

# =========================
# Dependencies
#
# PID 1 must be conservative: no async runtime, no thread pools,
# no implicit allocations. Every crate here earns its place.
# =========================
[dependencies]
nexis_common = { path = "../nexis_common" }

# Event loop — thin epoll wrapper, no runtime, no executor
mio = { version = "1", features = ["os-poll", "os-ext", "net"] }

# Signal handling — sigprocmask + signalfd as a mio Source, replaces nix
signal-hook = "0.3"
signal-hook-mio = { version = "0.2", features = ["support-v1_0"] }

# TOML service declarations
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Logging — no-alloc in the hot path
log = "0.4"

# Raw syscalls (pidfd_open, fork, execvp, cgroup writes)
libc = "0.2"

# Optional SELinux domain transitions at exec time
selinux = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
selinux-support = ["selinux"]

# =========================
# NOT used (and why):
#   tokio    — async runtime is a liability for PID 1
#   nix      — signal-hook replaces the only nix usage (signalfd);
#              remaining syscalls use libc directly for smaller dep tree
#   rayon    — PID 1 is single-threaded by design
#   crossbeam, dashmap — no concurrent data structures needed
#   tracing  — log crate is simpler and sufficient
#   clap     — PID 1 takes no CLI args; nexisctl is separate
# =========================
