[package]
name = "nexis_pm"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Gortych <kyle.gortych.dev@gmail.com>"]
description = "Declarative system package manager for NexisOS with optimized store operations and generation rollbacks"
license = "GPL-3.0-or-later"
repository = "https://github.com/NexisOS/NexisOS"
homepage = "https://github.com/NexisOS/NexisOS"
readme = "README.md"
keywords = ["package-manager", "linux", "declarative", "immutable", "rollback"]
categories = ["command-line-utilities", "development-tools", "os"]

[lib]
name = "nexis_pm"
path = "src/lib.rs"

[[bin]]
name = "nexis"
path = "src/main.rs"

# =========================
# Dependencies
# =========================
[dependencies]
nexis_common = { path = "../nexis_common" }

# CLI & configuration
clap = { version = "4.5", features = ["derive", "env", "color"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
merge = { version = "0.1", optional = true }
dirs  = { version = "5.0", optional = true }

# Validation & diagnostics
miette = { version = "7", features = ["fancy"] }
thiserror = "1.0"
anyhow = "1.0"

# Storage
redb = "2.1"

# Async runtime & networking
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "process",
    "io-util",
    "signal",
    "time"
] }
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "rustls-tls",
    "gzip",
    "brotli",
    "hickory-dns"
] }
futures = "0.3"

# Hashing
blake3 = { version = "1", features = ["rayon"] }
sha2 = "0.10"

# Dependency resolution
petgraph = "0.6"
gix = { version = "0.66", default-features = false, features = [
    "blocking-http-transport-reqwest-rust-tls"
], optional = true }
semver = { version = "1.0", optional = true }
regex  = { version = "1.11", optional = true }

# Archives & compression
tar = "0.4"
zstd = { version = "0.13", features = ["pkg-config"] }
flate2 = "1.0"

# Filesystem
walkdir = "2.5"
tempfile = "3.10"
camino = "1.1"
fs-err = "2.0"
reflink-copy = "0.1"

# Low-level Unix (NO nix)
rustix = { version = "0.38", features = [
    "fs",
    "process",
    "pipe",
    "event"
] }
uzers = "0.12"

# Security
selinux = { version = "0.4", optional = true }

# Parallelism (optional)
rayon = { version = "1.10", optional = true }
crossbeam = { version = "0.8", optional = true }
dashmap = { version = "6.1", optional = true }

# Logging
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "ansi",
    "tracing-log"
] }
tracing-appender = "0.2"

# Time & serialization
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

# CLI UX
console = "0.15"
indicatif = "0.17"
colored = "2.1"

# Utilities
glob = "0.3"
pathdiff = "0.2"
once_cell = "1.20"

# =========================
# Dev dependencies
# =========================
[dev-dependencies]
assert_fs = "1.1"
predicates = "3.1"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

# =========================
# Features
# =========================
[features]
default = [
    "nexis-init",
    "selinux-enforce",
    "parallel-builds",
    "version-resolution",
    "fleet-management",
    "service-model"
]

service-model = []

# Native Nexis init (pidfd + epoll)
nexis-init = []

# Core feature groups
selinux-enforce = ["selinux"]
parallel-builds = ["rayon", "crossbeam", "dashmap"]
version-resolution = ["gix", "semver", "regex"]
fleet-management = ["merge", "dirs"]

# Optional enhancements
build-cache = []
sandbox = []

[[bench]]
name = "store_operations"
harness = false
